--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header id="header-top">
-    <nav class="uk-navbar-container" uk-navbar>
+    <nav class="uk-navbar uk-navbar-container">
         <div class="uk-navbar-right">
 
             <ul class="uk-navbar-nav">
