added twig templates

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -23,7 +23,7 @@
 </header>
 <div id="maine-page-content">
 
-    <?=$content;?>
+    {% block content %}{% endblock %}
 </div>
 <footer>
     Footer
