--- a/templates/pages/page.twig
+++ b/templates/pages/page.twig
@@ -1,5 +1,10 @@
 {% extends 'main.twig' %}
 
 {% block content %}
-<h1>Home Page</h1>
+    <div class="uk-column-1-1">
+        <h1>{{ page.title }}</h1>
+        <div class="page-content">
+            {{ page.body }}
+        </div>
+    </div>
 {% endblock %}
