--- a/templates/main.twig
+++ b/templates/main.twig
@@ -14,10 +14,21 @@
         <div class="uk-navbar-right">
 
             <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="#">Active</a></li>
-                <li><a href="#">Item</a></li>
+                <li class="uk-active">
+                    <a href="/">Home</a>
+                </li>
+                <li><a href="{{ path_for("about.page") }}">About Us</a></li>
+                {% if(is_auth()) %}
+                    <li><a href="{{ path_for("profile.index") }}">Profile</a></li>
+                    <li><a href="{{ path_for("logout") }}"></a></li>
+                {% else %}
+                    <li><a href="{{ path_for("login.page") }}">Sign in</a></li>
+                    <li><a href="{{ path_for("register.page") }}">Sign up</a></li>
+                {% endif %}
             </ul>
-
+            <div class="uk-navbar-left">
+                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#"></a>
+            </div>
         </div>
     </nav>
 </header>
@@ -26,7 +37,10 @@
     {% block content %}{% endblock %}
 </div>
 <footer>
-    Footer
+    <div class="uk-section uk-section-secondary">
+        <div class="uk-container uk-container-small">Footer</div>
+    </div>
+
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
