--- a/templates/pages/page.twig
+++ b/templates/pages/page.twig
@@ -1,10 +1,12 @@
 {% extends 'main.twig' %}
 
 {% block content %}
-    <div class="uk-column-1-1">
-        <h1>{{ page.title }}</h1>
-        <div class="page-content">
-            {{ page.body }}
+    <div class="uk-section uk-section-default">
+        <div class="uk-container uk-container-small">
+            <h1>{{ page.title }}</h1>
+            <div class="page-content">
+                {{ page.body }}
+            </div>
         </div>
     </div>
 {% endblock %}
