--- a/templates/profile/index.twig
+++ b/templates/profile/index.twig
@@ -4,7 +4,9 @@
     <div class="uk-section">
         <div class="uk-container uk-container-xsmall">
             <h1>My Profile</h1>
-            <p>{{ name }}</p>
+            <p>Login: {{ name }}</p>
+            <p>IP: {{ ip }}</p>
+            <p>Email: {{ email }}</p>
         </div>
     </div>
 {% endblock %}
