--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -10,8 +10,39 @@
 </head>
 <body>
 <div id="maine-page-content">
+    <header id="header-top">
+        <nav class="uk-navbar uk-navbar-container">
+            <div class="uk-navbar-right">
 
-    {% block content %}{% endblock %}
+                <ul class="uk-navbar-nav">
+                    <li class="uk-active">
+                        <a href="/"><span uk-icon="icon: home"></span></a>
+                    </li>
+                    <li>
+                        <a href="{{ path_for("logout") }}"><span uk-icon="icon: sign-out"></a>
+                    </li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
+    <div class="uk-section admin-content-section">
+        <div class="uk-container uk-container-expand">
+            <div class="uk-grid">
+                <div class="uk-width-1-4 sidebar">
+                    <div class="uk-card uk-card-body uk-card-default">
+                    Sidebar
+                    </div>
+                </div>
+                <div class="uk-width-3-4">
+                    <div class="uk-card uk-card-body uk-card-default">
+                    {% block content %}{% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
