--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -30,7 +30,7 @@
         <div class="uk-container uk-container-expand">
             <div class="uk-grid">
                 <div class="uk-width-1-4 sidebar">
-                    <div class="uk-card uk-card-body uk-card-default">
+                    <div class="uk-card uk-card-body uk-card-primary">
                     Sidebar
                     </div>
                 </div>
