fixed bugs for creatin new user

--- a/templates/admin/users/add.twig
+++ b/templates/admin/users/add.twig
@@ -1,6 +1,7 @@
 {% extends "admin.twig" %}
 
 {% block content %}
+    <h3>Add User</h3>
 <form action="{{ path_for('user.store') }}" method="post">
     <div class="uk-margin">
         <label for="InputName">Login</label>
