--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -6,7 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    {% block styles %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/css/uikit.min.css" />
+    {% endblock %}
 </head>
 <body>
 <div id="maine-page-content">
@@ -35,6 +37,11 @@
                 <div class="uk-width-1-4 sidebar">
                     <div class="uk-card uk-card-body uk-card-primary">
                         <ul class="uk-nav">
+                            <li>
+                                <a href="{{ path_for('pages.list') }}">
+                                    <span uk-icon="icon: file-text"></span> Pages
+                                </a>
+                            </li>
                             <li class="uk-nav-divider"></li>
                             <li>
                                 <a href="{{ path_for('user.list') }}">
@@ -55,7 +62,10 @@
     </div>
 
 </div>
+{% block scripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
+<script src="/bundle.js"></script>
+{% endblock %}
 </body>
 </html>
