added view for update page

--- a/templates/admin/pages/add.twig
+++ b/templates/admin/pages/add.twig
@@ -15,9 +15,10 @@
             <label for="editor">Content</label>
             <textarea id="editor" name="body" class="uk-textarea" rows="8"></textarea>
         </div>
-        <button class="uk-button uk-button-default">Add Page</button>
+        <button class="uk-button uk-button-primary">Add Page</button>
     </form>
 {% endblock %}
+
 {% block scripts %}
     {{ parent() }}
     <script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
