--- a/templates/admin/users/add.twig
+++ b/templates/admin/users/add.twig
@@ -24,7 +24,7 @@
     </div>
     <input type="hidden" name="verified" value="1">
     <input type="hidden" value="{{ 'now'|date('U') }}" name="registered">
-    <button class="uk-button uk-button-default">Add User</button>
+    <button class="uk-button uk-button-primary">Add User</button>
 </form>
 
 
