--- a/templates/admin/users/edit.twig
+++ b/templates/admin/users/edit.twig
@@ -29,6 +29,6 @@
             </select>
         </div>
         <input type="hidden" name="id" value="{{ user.id }}">
-        <button class="uk-button uk-button-default">Update User</button>
+        <button class="uk-button uk-button-primary">Update User</button>
     </form>
 {% endblock %}
