added Media item in menu admin

--- a/templates/admin/pages/add.twig
+++ b/templates/admin/pages/add.twig
@@ -1,5 +1,7 @@
 {% extends "admin.twig" %}
 
+{% block metaTitle %}Add new page{% endblock %}
+
 {% block content %}
     <h3>Add Page</h3>
     <form action="{{ path_for('page.store') }}" method="post">
