--- a/templates/admin/pages/index.twig
+++ b/templates/admin/pages/index.twig
@@ -1,5 +1,7 @@
 {% extends "admin.twig" %}
 
+{% block metaTitle %}All Pages{% endblock %}
+
 {% block alert %}
     {% include 'alerts.twig' %}
 {% endblock %}
