--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{% block metaTitle %}Administrator's panel{% endblock %}</title>
     {% block styles %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/css/uikit.min.css" />
     {% endblock %}
@@ -42,7 +42,11 @@
                                     <span uk-icon="icon: file-text"></span> Pages
                                 </a>
                             </li>
-                            <li class="uk-nav-divider"></li>
+                            <li>
+                                <a href="{{ path_for('pages.list') }}">
+                                    <span uk-icon="icon: image"></span> Media
+                                </a>
+                            </li>
                             <li>
                                 <a href="{{ path_for('user.list') }}">
                                     <span uk-icon="icon: users"></span> Users
