--- a/templates/admin/pages/edit.twig
+++ b/templates/admin/pages/edit.twig
@@ -1,5 +1,7 @@
 {% extends "admin.twig" %}
 
+{% block metaTitle %}Edit page {{ page.title }}{% endblock %}
+
 {% block alert %}
     {% include 'alerts.twig' %}
 {% endblock %}
