--- a/templates/admin/users/edit.twig
+++ b/templates/admin/users/edit.twig
@@ -1,5 +1,7 @@
 {% extends "admin.twig" %}
 
+{% block metaTitle %}Edit User {{ user.username }}{% endblock %}
+
 {% block alert %}
     {% include 'alerts.twig' %}
 {% endblock %}
