--- a/templates/admin/users/index.twig
+++ b/templates/admin/users/index.twig
@@ -1,5 +1,7 @@
 {% extends "admin.twig" %}
 
+{% block metaTitle %}All Users{% endblock %}
+
 {% block alert %}
     {% include 'alerts.twig' %}
 {% endblock %}
