implementation uploaded images in media library

--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -43,7 +43,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path_for('pages.list') }}">
+                                <a href="{{ path_for('media.list') }}">
                                     <span uk-icon="icon: image"></span> Media
                                 </a>
                             </li>
