--- a/templates/admin/media/index.twig
+++ b/templates/admin/media/index.twig
@@ -1,7 +1,6 @@
 {% extends 'admin.twig' %}
 
-
-{% block metaTitle %}Edit page {{ page.title }}{% endblock %}
+{% block metaTitle %}All Media files {{ page.title }}{% endblock %}
 
 {% block alert %}
     {% include 'alerts.twig' %}
@@ -21,7 +20,7 @@
     </div>
     <h3>Media files</h3>
     {% if(items) %}
-    <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+    <div class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
         {% for item in items %}
         <div>
             <div class="uk-card uk-card-default">
@@ -29,7 +28,6 @@
                     <img src="/uploads/{{ item.url }}" alt="">
                 </div>
                 <div class="uk-card-body">
-
                     <p>
                         <a href="{{ path_for('media.edit', {'id' : item.id}) }}"><span uk-icon="icon: file-edit"></span></a>&nbsp;
                         <a href="{{ path_for('media.delete', {'id' : item.id}) }}"><span uk-icon="icon: trash"></span></a>
