--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -7,69 +7,114 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block metaTitle %}Administrator's panel{% endblock %}</title>
     {% block styles %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/css/uikit.min.css" />
+        <link rel="stylesheet" href="/backend/css/uikit.min.css" />
+        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="/backend/css/style.css" />
+        <link rel="stylesheet" href="/backend/css/notyf.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="/backend/js/uikit.min.js" ></script>
+        <script src="/backend/js/uikit-icons.min.js" ></script>
     {% endblock %}
 </head>
 <body>
 <div id="maine-page-content">
-    <header id="header-top">
-        <nav class="uk-navbar uk-navbar-container">
-            <div class="uk-navbar-right">
 
-                <ul class="uk-navbar-nav">
-                    <li class="uk-active">
-                        <a href="/"><span uk-icon="icon: home"></span></a>
-                    </li>
-                    <li>
-                        <a href="{{ path_for("logout") }}"><span uk-icon="icon: sign-out"></a>
-                    </li>
-                </ul>
-
+    <div uk-sticky class="uk-navbar-container tm-navbar-container uk-active">
+            <div class="uk-container uk-container-expand">
+                <nav uk-navbar>
+                    <div class="uk-navbar-left">
+                        <a id="sidebar_toggle" class="uk-navbar-toggle" uk-navbar-toggle-icon ></a>
+                        <a href="#" class="uk-navbar-item uk-logo">
+                            UI Admin
+                        </a>
+                    </div>
+                    <div class="uk-navbar-right uk-light">
+                        <ul class="uk-navbar-nav">
+                            <li class="uk-active">
+                                <a href="#">Èrik &nbsp;<span class="ion-ios-arrow-down"></span></a>
+                                <div uk-dropdown="pos: bottom-right; mode: click; offset: -17;">
+                                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                                        <li class="uk-nav-header">Options</li>
+                                        <li><a href="{{ path_for('profile.index') }}">Edit Profile</a></li>
+                                        <li class="uk-nav-header">Actions</li>
+                                        <li><a href="{{ path_for('home.page') }}">Home page</a></li>
+                                        <li><a href="{{ path_for("logout") }}">Logout</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-        </nav>
-    </header>
+    </div>
+    <div id="sidebar" class="tm-sidebar-left uk-background-default">
+        <center>
+            <div class="user">
+                <img id="avatar" width="100" class="uk-border-circle" src="images/avatar.jpg" />
+                <div class="uk-margin-top"></div>
+                <div id="name" class="uk-text-truncate">Èrik Campobadal</div>
+                <div id="email" class="uk-text-truncate">ConsoleTVs@gmail.com</div>
+                <span id="status" data-enabled="true" data-online-text="Online" data-away-text="Away" data-interval="10000" class="uk-margin-top uk-label uk-label-success"></span>
+            </div>
+            <br />
+        </center>
+        <ul class="uk-nav uk-nav-default">
+
+            <li class="uk-parent">
+            </li>
+            <li><a href="buttons.html">Buttons</a></li>
+            <li><a href="components.html">Components</a></li>
+            <li><a href="tables.html">Tables</a></li>
+
+            <li class="uk-nav-header">
+                Pages
+            </li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
+            <li><a href="article.html">Article</a></li>
+            <li><a href="404.html">404</a></li>
+        </ul>
+    </div>
     <div class="alert-wrapper">
         {% block alert %}{% endblock %}
     </div>
-    <div class="uk-section admin-content-section">
-        <div class="uk-container uk-container-expand">
-            <div class="uk-grid">
-                <div class="uk-width-1-4 sidebar">
-                    <div class="uk-card uk-card-body uk-card-primary">
-                        <ul class="uk-nav">
-                            <li>
-                                <a href="{{ path_for('pages.list') }}">
-                                    <span uk-icon="icon: file-text"></span> Pages
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ path_for('media.list') }}">
-                                    <span uk-icon="icon: image"></span> Media
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ path_for('user.list') }}">
-                                    <span uk-icon="icon: users"></span> Users
-                                </a>
-                            </li>
-                            <li class="uk-nav-divider"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="uk-width-3-4">
-                    <div class="uk-card uk-card-body uk-card-default">
-                    {% block content %}{% endblock %}
-                    </div>
-                </div>
+    <div class="content-padder content-background">
+        <div class="uk-section-small uk-section-default header">
+            <div class="uk-container uk-container-large">
+                <h1><span class="ion-speedometer"></span> Dashboard</h1>
+                <p>
+                    Welcome back, Èrik Campobadal
+                </p>
+                <ul class="uk-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><span href="">Dashboard</span></li>
+                </ul>
+            </div>
+        </div>
+        <div class="uk-section-small">
+            <div class="uk-container uk-container-large">
+                {% block content %}
+
+                {% endblock %}
             </div>
         </div>
     </div>
 
 </div>
 {% block scripts %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
-<script src="/bundle.js"></script>
+
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js" integrity="sha256-UGwvyUFH6Qqn0PSyQVw4q3vIX0wV1miKTracNJzAWPc=" crossorigin="anonymous"></script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.12/jquery.transit.min.js" integrity="sha256-rqEXy4JTnKZom8mLVQpvni3QHbynfjPmPxQVsPZgmJY=" crossorigin="anonymous"></script>
+    <script src="/backend/js/notyf.min.js"></script>
+    <!-- Required Overall Script -->
+    <script src="/backend/js/script.js"></script>
+    <!-- Status Updater -->
+    <script src="/backend/js/status.js"></script>
+    <!-- Sample Charts -->
+    <!--script src="/backend/js/charts.js"></script-->
+    <!-- Sample Notifications -->
+    <script src="/backend/js/notification.js"></script>
+    <script src="/bundle.js"></script>
 {% endblock %}
 </body>
 </html>
