displayed user info in admin panel

--- a/templates/admin/media/edit.twig
+++ b/templates/admin/media/edit.twig
@@ -6,6 +6,12 @@
     {% include 'alerts.twig' %}
 {% endblock %}
 
+{% block labelPage %}<span uk-icon="icon: image; ratio: 2"></span> Media{% endblock %}
+
+{% block adminHeader %} Edit Image {% endblock %}
+
+{% block labelPathName %}Media{% endblock %}
+
 {% block content %}
     <div class="uk-section">
         <div class="uk-container">
