--- a/templates/admin/media/index.twig
+++ b/templates/admin/media/index.twig
@@ -6,42 +6,58 @@
     {% include 'alerts.twig' %}
 {% endblock %}
 
+{% block labelPage %}<span uk-icon="icon: image; ratio: 2"></span> Media{% endblock %}
+
+{% block adminHeader %} Pictures List {% endblock %}
+
+{% block labelPathName %}Media{% endblock %}
+
 {% block content %}
-    <div class="uk-align-right">
-        <div class="uk-margin" uk-margin>
-            <form action="{{ path_for('media.store') }}" method="post" enctype="multipart/form-data">
-            <div uk-form-custom="target: true">
-                <input type="file" name="media">
-                <input class="uk-input uk-form-width-medium" type="text" placeholder="Select file" disabled>
-            </div>
-            <button class="uk-button uk-button-default">Submit</button>
-            </form>
-        </div>
-    </div>
-    <h3>Media files</h3>
-    {% if(items) %}
-    <div class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
-        {% for item in items %}
+    <div uk-grid class="uk-child-width-1-1@s uk-child-width-1-1@l">
         <div>
             <div class="uk-card uk-card-default">
-                <div class="uk-card-media-top">
-                    <img src="/uploads/{{ item.url }}" alt="">
+                <div class="uk-card-header">
+                    <div class="uk-align-right">
+                    <div class="uk-margin" uk-margin>
+                        <form action="{{ path_for('media.store') }}" method="post" enctype="multipart/form-data">
+                        <div uk-form-custom="target: true">
+                            <input type="file" name="media">
+                            <input class="uk-input uk-form-width-medium" type="text" placeholder="Select file" disabled>
+                        </div>
+                        <button class="uk-button uk-button-default">Submit</button>
+                        </form>
+                    </div>
+                </div>
                 </div>
                 <div class="uk-card-body">
-                    <p>
-                        <a href="{{ path_for('media.edit', {'id' : item.id}) }}"><span uk-icon="icon: file-edit"></span></a>&nbsp;
-                        <a href="{{ path_for('media.delete', {'id' : item.id}) }}"><span uk-icon="icon: trash"></span></a>
-                    </p>
+                {% if(items) %}
+                <div class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
+                    {% for item in items %}
+                    <div>
+                        <div class="uk-card uk-card-default">
+                            <div class="uk-card-media-top">
+                                <img src="/uploads/{{ item.url }}" alt="">
+                            </div>
+                            <div class="uk-card-body">
+                                <p>
+                                    <a href="{{ path_for('media.edit', {'id' : item.id}) }}"><span uk-icon="icon: file-edit"></span></a>&nbsp;
+                                    <a href="{{ path_for('media.delete', {'id' : item.id}) }}"><span uk-icon="icon: trash"></span></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    <div>
+                        <div class="uk-tile uk-tile-muted">
+                            <p class="uk-h2">Not Files</p>
+                        </div>
+                    </div>
+                {% endif %}
+
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
-    {% else %}
-        <div>
-            <div class="uk-tile uk-tile-muted">
-                <p class="uk-h2">Not Files</p>
-            </div>
-        </div>
-    {% endif %}
 {% endblock %}
