--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -15,10 +15,13 @@
         <script src="/backend/js/uikit.min.js" ></script>
         <script src="/backend/js/uikit-icons.min.js" ></script>
     {% endblock %}
+
+    {% if(is_auth()) %}
+        {% set user=get_user() %}
+    {% endif %}
 </head>
 <body>
 <div id="maine-page-content">
-
     <div uk-sticky class="uk-navbar-container tm-navbar-container uk-active">
             <div class="uk-container uk-container-expand">
                 <nav uk-navbar>
@@ -50,52 +53,56 @@
     <div id="sidebar" class="tm-sidebar-left uk-background-default">
         <center>
             <div class="user">
-                <img id="avatar" width="100" class="uk-border-circle" src="images/avatar.jpg" />
+                <img id="avatar" width="100" class="uk-border-circle" src="{{ user.avatar | default('/backend/images/no-avatar.png') }}" />
                 <div class="uk-margin-top"></div>
-                <div id="name" class="uk-text-truncate">Èrik Campobadal</div>
-                <div id="email" class="uk-text-truncate">ConsoleTVs@gmail.com</div>
+                <div id="name" class="uk-text-truncate">{{ user.username | escape }}</div>
+                <div id="email" class="uk-text-truncate">{{ user.email | escape }}</div>
                 <span id="status" data-enabled="true" data-online-text="Online" data-away-text="Away" data-interval="10000" class="uk-margin-top uk-label uk-label-success"></span>
             </div>
             <br />
         </center>
-        <ul class="uk-nav uk-nav-default">
-
-            <li class="uk-parent">
-            </li>
-            <li><a href="buttons.html">Buttons</a></li>
-            <li><a href="components.html">Components</a></li>
-            <li><a href="tables.html">Tables</a></li>
-
+        <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="multiple: true"">
             <li class="uk-nav-header">
-                Pages
+                Admin Menu
             </li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-            <li><a href="article.html">Article</a></li>
-            <li><a href="404.html">404</a></li>
+            <li class="uk-parent">
+                <a href="#"><span  uk-icon="icon: file-text"></span> Pages</a>
+                <ul class="uk-nav-sub">
+                    <li><a href="{{ path_for('pages.list') }}">All Pages</a></li>
+                    <li><a href="{{ path_for('page.add') }}">Add Page</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="{{ path_for('media.list') }}"><span  uk-icon="icon: image"></span> Media</a>
+            </li>
+            <li class="uk-parent">
+                <a href="#"><span  uk-icon="icon: user"></span> Users</a>
+                <ul class="uk-nav-sub">
+                    <li><a href="{{ path_for('user.list') }}">All Users</a></li>
+                    <li><a href="{{ path_for('user.add') }}">Add User</a></li>
+                </ul>
+            </li>
         </ul>
-    </div>
-    <div class="alert-wrapper">
-        {% block alert %}{% endblock %}
     </div>
     <div class="content-padder content-background">
         <div class="uk-section-small uk-section-default header">
             <div class="uk-container uk-container-large">
-                <h1><span class="ion-speedometer"></span> Dashboard</h1>
+                <h1> {% block labelPage %}<span class="ion-speedometer"></span> Dashboard{% endblock %}</h1>
                 <p>
-                    Welcome back, Èrik Campobadal
+                    {% block adminHeader %}Welcome back, Èrik Campobadal{% endblock %}
                 </p>
                 <ul class="uk-breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li><span href="">Dashboard</span></li>
+                    <li><a href="{{ path_for('admin') }}">Home</a></li>
+                    <li><span href="">{% block labelPathName %}Dashboard{% endblock %}</span></li>
                 </ul>
             </div>
         </div>
         <div class="uk-section-small">
             <div class="uk-container uk-container-large">
-                {% block content %}
-
-                {% endblock %}
+                <div class="alert-wrapper">
+                    {% block alert %}{% endblock %}
+                </div>
+                {% block content %}{% endblock %}
             </div>
         </div>
     </div>
