--- a/templates/admin/pages/add.twig
+++ b/templates/admin/pages/add.twig
@@ -2,23 +2,36 @@
 
 {% block metaTitle %}Add new page{% endblock %}
 
+{% block labelPage %}<span uk-icon="icon: file-text; ratio: 2"></span> Pages{% endblock %}
+
+{% block adminHeader %} Add new page {% endblock %}
+
+{% block labelPathName %}Pages{% endblock %}
+
 {% block content %}
-    <h3>Add Page</h3>
-    <form action="{{ path_for('page.store') }}" method="post">
-        <div class="uk-margin">
-            <label for="InputTitle">Title</label>
-            <input type="text" name="title" class="uk-input slug-title" value="" id="InputTitle" aria-describedby="titleHelp" placeholder="Title">
+<div uk-grid class="uk-child-width-1-1@s uk-child-width-1-1@l">
+    <div>
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-body">
+                <form action="{{ path_for('page.store') }}" method="post">
+                    <div class="uk-margin">
+                        <label for="InputTitle">Title</label>
+                        <input type="text" name="title" class="uk-input slug-title" value="" id="InputTitle" aria-describedby="titleHelp" placeholder="Title">
+                    </div>
+                    <div class="uk-margin">
+                        <label for="InputSlug">Slug</label>
+                        <input type="text" name="slug" class="uk-input slug-res" value="" id="InputSlug" aria-describedby="slugHelp" placeholder="Slug">
+                    </div>
+                    <div class="uk-margin">
+                        <label for="editor">Content</label>
+                        <textarea id="editor" name="body" class="uk-textarea" rows="8"></textarea>
+                    </div>
+                    <button class="uk-button uk-button-primary">Add Page</button>
+                </form>
+            </div>
         </div>
-        <div class="uk-margin">
-            <label for="InputSlug">Slug</label>
-            <input type="text" name="slug" class="uk-input slug-res" value="" id="InputSlug" aria-describedby="slugHelp" placeholder="Slug">
-        </div>
-        <div class="uk-margin">
-            <label for="editor">Content</label>
-            <textarea id="editor" name="body" class="uk-textarea" rows="8"></textarea>
-        </div>
-        <button class="uk-button uk-button-primary">Add Page</button>
-    </form>
+    </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
