--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -17,7 +17,7 @@
     {% endblock %}
 
     {% if(is_auth()) %}
-        {% set user=get_user() %}
+        {% set current_user=get_user() %}
     {% endif %}
 </head>
 <body>
@@ -53,10 +53,10 @@
     <div id="sidebar" class="tm-sidebar-left uk-background-default">
         <center>
             <div class="user">
-                <img id="avatar" width="100" class="uk-border-circle" src="{{ user.avatar | default('/backend/images/no-avatar.png') }}" />
+                <img id="avatar" width="100" class="uk-border-circle" src="{{ current_user.avatar | default('/backend/images/no-avatar.png') }}" />
                 <div class="uk-margin-top"></div>
-                <div id="name" class="uk-text-truncate">{{ user.username | escape }}</div>
-                <div id="email" class="uk-text-truncate">{{ user.email | escape }}</div>
+                <div id="name" class="uk-text-truncate">{{ current_user.username | escape }}</div>
+                <div id="email" class="uk-text-truncate">{{ current_user.email | escape }}</div>
                 <span id="status" data-enabled="true" data-online-text="Online" data-away-text="Away" data-interval="10000" class="uk-margin-top uk-label uk-label-success"></span>
             </div>
             <br />
